docs: use static generation for doc pages [skip ci]

--- a/docs/dev-docs/content/references/commands/run.mdx
+++ b/docs/dev-docs/content/references/commands/run.mdx
@@ -1,13 +1,19 @@
 ---
-title: Installation
-icon: Rocket
+title: run
 ---
-## Linux or macOS
+
+Hello World again!
+
+## Installation
+
+
+### Linux or macOS
 ```sh
 curl -fsSL https://raw.githubusercontent.com/omni-oss/omni/main/installers/unix.sh | sh
 ```
 
-## Windows (PowerShell)
+
+### Windows (PowerShell)
 ```ps1
 Invoke-WebRequest -Uri "https://raw.githubusercontent.com/omni-oss/omni/main/installers/windows.ps1" -UseBasicParsing | Invoke-Expression
 ```
