docs: add autogenerator script [skip ci]

--- a/apps/site/content/docs/references/commands/index.mdx
+++ b/apps/site/content/docs/references/commands/index.mdx
@@ -1,19 +1,6 @@
 ---
-title: Commands
+title: Commands Reference
+icon: Terminal
 ---
 
-Hello World again!
-
-## Installation
-
-
-### Linux or macOS
-```sh
-curl -fsSL https://raw.githubusercontent.com/omni-oss/omni/main/installers/unix.sh | sh
-```
-
-
-### Windows (PowerShell)
-```ps1
-Invoke-WebRequest -Uri "https://raw.githubusercontent.com/omni-oss/omni/main/installers/windows.ps1" -UseBasicParsing | Invoke-Expression
-```
+This section contains reference documentation for the `omni` command-line interface (CLI). It provides detailed information about the available commands, their options, and usage examples.
