feat: rename print-schema to schema

--- a/apps/site/content/docs/references/commands/omni/hash/index.mdx
+++ b/apps/site/content/docs/references/commands/omni/hash/index.mdx
@@ -6,6 +6,8 @@ description: "Get hash for workspace or projects"
 
 version: "0.4.12"
 
+author: "Clarence Manuel &lt;rencedm112@gmail.com&gt;"
+
 ---
 
 
@@ -23,8 +25,6 @@ omni hash [OPTIONS] <SUBCOMMAND>
 ### `-r`, `--raw-value`
 
 Only output the raw string representation of the hash, no trailing newline, and no traces
-
-
 
 - **Required:** No
 
